upgrade and improve kstream player-app